(lang dune 3.6)

(name flow_field)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name flow_field)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune camlimages))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
